--- a/app/views/collaborator_groups/edit.haml
+++ b/app/views/collaborator_groups/edit.haml
@@ -13,7 +13,7 @@
             = user.name
             %span.pull-right
               %a.btn.btn-xs.btn-warning{href: collaborator_group_remove_collaborator_path(@collaborator_group, user_id: user), data: {method: 'post'}}
-                %i.fa.fa-times
+                = fa_icon 'times'
       .panel-footer
         %b Search by name or email address
         = form_for @collaborator_group, url: collaborator_group_add_collaborator_path(@collaborator_group), method: :post do |f|
