--- a/app/views/courses/show.haml
+++ b/app/views/courses/show.haml
@@ -27,7 +27,7 @@
       %aside.page-sidebar.col-md-3.col-md-offset-1.col-sm-4.col-sm-offset-1
         %section.widget.has-divider
           %h3.title
-            %i.fa.fa-bell
+            = fa_icon "bell"
             = link_to "Announcements", announcements_path(course_id: @course.id)
           %ul.rankable.list-group
             - @course.announcements.by_priority.limit(5).each do |announcement|
@@ -41,7 +41,7 @@
                   Click to see all announcements
         %section.widget.has-divider
           %h3.title
-            %i.fa.fa-link
+            = fa_icon 'link'
             = link_to "Links", links_path(course_id: @course.id)
           %ul.rankable.list-group
             - @course.links.by_priority.limit(5).each do |link|
@@ -49,12 +49,12 @@
                 - if current_holder.can?(:edit, link)
                   %i.handle.fa.fa-sort{"aria-hidden" => "true"}
                   = link_to link_path(link), method: :delete, data: { confirm: 'Are you sure?' } do
-                    %i.fa.fa-times
+                    = fa_icon 'times'
                   = link_to new_escalation_request_path(link_id: link) do
                     - if link.escalated?
-                      %i.fa.fa-star
+                      = fa_icon 'star'
                     - else
-                      %i.fa.fa-star-o
+                      = fa_icon 'star-o'
                 = link_to link.name, link.target
             - if @course.links.by_priority.count > 5
               %li.list-group-item.shaded
