--- a/app/views/departments/show.haml
+++ b/app/views/departments/show.haml
@@ -38,7 +38,7 @@
             - excess_teachers = @department.collaborator_group.users.count - 8
             - if excess_teachers >= 1
               = link_to "javascript:;", id: "show-more-teachers", class: "btn btn-sm btn-info" do
-                %i.fa.fa-ellipsis-h
+                = fa_icon 'ellipsis-h'
                 = "Click to see #{excess_teachers} more staff"
         %span.row
           - unless @department.courses.empty?
@@ -46,7 +46,7 @@
               = link_to "Courses", department_courses_path(@department)
               %small
                 = link_to department_courses_path(@department) do
-                  %i.fa.fa-ellipsis-v
+                  = fa_icon 'ellipsis-v'
                   Click to see all
             %input.course-search.form-control{type: 'text', placeholder: 'Search courses'}
             %hr
@@ -59,13 +59,13 @@
               - excess_courses = @department.courses.count - 8
               - if excess_courses >= 1
                 = link_to "javascript:;", id: "show-more-courses", class: "btn btn-sm btn-info" do
-                  %i.fa.fa-ellipsis-h
+                  = fa_icon 'ellipsis-h'
                   = "Click to see #{excess_courses} more courses"
 
       %aside.page-sidebar.col-md-3.col-md-offset-1.col-sm-4.col-sm-offset-1
         %section.widget.has-divider
           %h3.title
-            %i.fa.fa-bell
+            = fa_icon "bell"
             = link_to "Announcements", announcements_path(department_id: @department.id)
           %ul.rankable.list-group
             - @department.announcements.by_priority.limit(5).each do |announcement|
@@ -79,7 +79,7 @@
                   Click to see all announcements
         %section.widget.has-divider
           %h3.title
-            %i.fa.fa-link
+            = fa_icon 'link'
             = link_to "Links", links_path(department_id: @department.id)
           %ul.rankable.list-group
             - @department.links.by_priority.limit(5).each do |link|
@@ -87,12 +87,12 @@
                 - if current_holder.can?(:edit, link)
                   %i.handle.fa.fa-sort{"aria-hidden" => "true"}
                   = link_to link_path(link), method: :delete, data: { confirm: 'Are you sure?' } do
-                    %i.fa.fa-times
+                    = fa_icon 'times'
                   = link_to new_escalation_request_path(link_id: link) do
                     - if link.escalated?
-                      %i.fa.fa-star
+                      = fa_icon 'star'
                     - else
-                      %i.fa.fa-star-o
+                      = fa_icon 'star-o'
                 = link_to link.name, link.target
             - if @department.links.by_priority.count > 5
               %li.list-group-item.shaded
