--- a/app/views/integrations/providers.haml
+++ b/app/views/integrations/providers.haml
@@ -1,17 +1,17 @@
 %ol.breadcrumb
   %li= link_to 'Integrations', integrations_path
   %li.active
-    %i.fa.fa-plug
+    = fa_icon 'plug'
     Create Integration
 
 - @providers.each do |provider|
   .integration-provider
     .meta
       .icon
-        %i.fa{class: "fa-#{provider.fa_icon}"}
+        = fa_icon provider.fa_icon
       .info
         .name= provider.friendly_name
         .description= t("integrations.#{provider.id}.description")
     = link_to new_integration_path(provider: provider.id), class: 'btn' do
-      %i.fa.fa-plug
+      = fa_icon 'plug'
       Create
