--- a/app/views/peek/views/_mongo.haml
+++ b/app/views/peek/views/_mongo.haml
@@ -2,5 +2,5 @@
   %span{"data-defer-to" => "#{view.defer_key}-duration"} ...
   \/
   %span{"data-defer-to" => "#{view.defer_key}-calls"} ...
-%i.fa.fa-database
+= fa_icon 'database'
 %span.hidden-xs mongo
