--- a/app/views/peek/views/_resque.haml
+++ b/app/views/peek/views/_resque.haml
@@ -6,5 +6,5 @@
     \/
     %span{"data-defer-to" => "#{view.defer_key}-workers"} ...
     workers
-  %i.fa.fa-server
+  = fa_icon 'server'
   resque
