--- a/app/views/welcome/about.haml
+++ b/app/views/welcome/about.haml
@@ -8,7 +8,7 @@
           %h3.title= t('.info.title')
           %blockquote.custom-quote
             %p
-              %i.fa.fa-quote-left
+              = fa_icon 'quote-left'
               = t('.principal.statement')
             %p.people
               %span.name= t('.principal.name')
