--- a/app/views/integrations/edit.haml
+++ b/app/views/integrations/edit.haml
@@ -1,7 +1,7 @@
 %ol.breadcrumb
   %li= link_to 'Integrations', integrations_path
   %li.active
-    %i.fa{class: "fa-#{@integration.provider.fa_icon}"}
+    = fa_icon @integration.provider.fa_icon
     = @integration.provider.friendly_name
 
 = render 'form'
