--- a/app/views/integrations/index.haml
+++ b/app/views/integrations/index.haml
@@ -1,14 +1,14 @@
 %ol.breadcrumb
   %li.active Integrations
   = link_to new_integration_path, class: 'pull-right' do
-    %i.fa.fa-plug
+    = fa_icon 'plug'
     Create Integration
 
 - @integrations.each do |integration|
   .integration-provider
     .meta
       .icon
-        %i.fa{class: "fa-#{integration.provider.fa_icon}"}
+        = fa_icon integration.provider.fa_icon
       .info
         .name
           = link_to integration.provider.friendly_name, edit_integration_path(integration)
