--- a/app/views/partials/_footer.haml
+++ b/app/views/partials/_footer.haml
@@ -8,15 +8,15 @@
     %ul.social
       %li.text-primary
         %a{:href => "https://twitter.com/SyoStudentGov"}
-          %i.fa.fa-twitter
+          = fa_icon 'twitter'
       %li
         %a{:href => "https://www.facebook.com/syosseths"}
-          %i.fa.fa-facebook
+          = fa_icon 'facebook'
       %li
         %a{:href => "https://github.com/Syosset/syosset"}
-          %i.fa.fa-github
+          = fa_icon 'github'
       %li
-        %i.fa.fa-ellipsis-v
+        = fa_icon 'ellipsis-v'
       %li#google_translate_element
         %script{:defer => "", :src => "//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit", :type => "text/javascript"}
 
