--- a/app/views/partials/chat/_chat.haml
+++ b/app/views/partials/chat/_chat.haml
@@ -6,7 +6,7 @@
           How can we help you?
         .col-xs-2
           %span.pull-right#dismiss_support
-            %i.fa.fa-times
+            = fa_icon 'times'
     .panel-body
       .messages
         .support-info
@@ -18,4 +18,4 @@
         %span.input-group-btn
           %button#send_button.btn.btn-info{:type => "button"}
             Send
-            %i.fa.fa-paper-plane-o
+            = fa_icon 'paper-plane-o'
