--- a/app/views/peek/views/_redis.haml
+++ b/app/views/peek/views/_redis.haml
@@ -2,5 +2,5 @@
   %span{"data-defer-to" => "#{view.defer_key}-duration"} ...
   \/
   %span{"data-defer-to" => "#{view.defer_key}-calls"} ...
-%i.fa.fa-clock-o
+= fa_icon 'clock-o'
 %span.hidden-xs redis
