--- a/app/views/users/index.haml
+++ b/app/views/users/index.haml
@@ -18,9 +18,9 @@
                 = render 'badges/badge', badge: user.badge
                 &nbsp;
                 - if user.super_admin
-                  %i.fa.fa-shield
+                  = fa_icon 'shield'
                 - if user.bot
-                  %i.fa.fa-certificate
+                  = fa_icon 'certificate'
               %td= user.email
     = paginate @users, theme: 'tb3'
 
