--- a/app/views/partials/nav/_day_indicator.haml
+++ b/app/views/partials/nav/_day_indicator.haml
@@ -1,4 +1,4 @@
-- if @current_day.is_set?
+- if @current_day.set?
   .red-white-display
     = link_to "javascript:;", class: "day", tabindex: 0, role: :button, "data-trigger" => :focus, title: "Period Schedule", "data-content" => "#{render 'partials/nav/dynamic_schedule'}", "data-html" => :true, "data-placement" => :bottom , "data-toggle" => :popover, "data-container" => :nav do
       - unless @current_day.color == 'No Color'
