--- a/app/views/users/_admin_form.haml
+++ b/app/views/users/_admin_form.haml
@@ -8,7 +8,7 @@
     = f.text_field :name, placeholder: "Name", class: "form-control"
   .form-group
     = f.label :badge
-    = f.select :badge, options_for_select(Badge.all.collect {|b|[b.name,b.id]}, @user.badge.try(:id)), include_blank: true
+    = f.select :badge, options_for_select(Badge.all.collect {|b|[b.name,b.id]}, @user.badge&.id), include_blank: true
   .form-group
     = f.label :picture
     = f.file_field :picture, class: "form-control"
