--- a/app/views/announcements/index.haml
+++ b/app/views/announcements/index.haml
@@ -17,7 +17,7 @@
               %th Posted Under
             %th Title
             %th Announcement
-            - if Current.user.try(:admin_enabled?)
+            - if Current.user&.admin_enabled?
               %th Poster
             %th Posted
         %tbody.rankable
@@ -31,7 +31,7 @@
                 %td= link_to "#{announceable.send("name") || "a #{announceable.class.to_s.humanize}"}", announceable
               %td= link_to announcement.name.truncate(60), announcement
               %td= truncate(strip_tags(announcement.markdown.blank? ? announcement.content : @markdown.render(announcement.markdown)), length: 50)
-              - if Current.user.try(:admin_enabled?)
+              - if Current.user&.admin_enabled?
                 %td
                   = link_to announcement.poster do
                     = announcement.poster.name
