--- a/app/views/partials/_footer.haml
+++ b/app/views/partials/_footer.haml
@@ -17,7 +17,7 @@
           = fa_icon 'github'
     %ul.actions
       %li.translate{'data-turbolinks-permanent': true}
-        .btn.btn-loader#translate_trigger
+        .btn-loader#translate_trigger
           = fa_icon 'google'
           Translate
         #google_translate_element
