--- a/app/views/collaborator_groups/edit.haml
+++ b/app/views/collaborator_groups/edit.haml
@@ -27,7 +27,7 @@
   $(function() {
         $('#search').autocomplete({
               minLength: 2,
-              source: '#{autocomplete_path(:json)}',
+            source: '#{user_autocompletions_path(:json)}',
               focus: function(event, ui) {
                   $('#search').val(ui.item.label);
                   return false;
