Move admin out of namespace

--- a/app/views/administrations/show.haml
+++ b/app/views/administrations/show.haml
@@ -12,7 +12,7 @@
 = link_to escalation_requests_path, class: "btn btn-admin" do
   = fa_icon "star"
   View Escalation Requests
-= link_to user_admin_index_path, class: "btn btn-admin" do
+= link_to users_path, class: "btn btn-admin" do
   = fa_icon "user"
   Manage Users
 = link_to badges_path, class: "btn btn-admin" do
