Update user bulk-add methods

--- a/app/views/users/new.haml
+++ b/app/views/users/new.haml
@@ -4,7 +4,7 @@
       Create Users
   .container-fluid
     .row-fluid
-      = form_tag populate_users_path, method: :post do
+      = form_tag users_path, method: :post do
         .form-group
           %p
             Enter user data seperated by newlines.
