Add policy management views
Co-authored-by: Neil Johari <neil@johari.tech>

--- a/app/views/administrations/show.haml
+++ b/app/views/administrations/show.haml
@@ -15,6 +15,9 @@
 = link_to users_path, class: "btn btn-admin" do
   = fa_icon "user"
   Manage Users
+= link_to policies_path, class: "btn btn-admin" do
+  = fa_icon "key"
+  Manage Permissions
 = link_to badges_path, class: "btn btn-admin" do
   = fa_icon "shield"
   Manage Badges
