--- a/app/views/permissions/policies/show.haml
+++ b/app/views/permissions/policies/show.haml
@@ -1,8 +1,10 @@
 %ol.breadcrumb
   %li= link_to 'Policies', policies_path
   %li.active= @policy.name
-  = link_to edit_policy_path(@policy), class: 'pull-right' do
-    = fa_icon 'key'
+.row
+  = link_to edit_policy_path(@policy), class: 'btn btn-warning pull-right' do
     Edit Policy
-
-%pre= JSON.pretty_generate(@policy.serializable_hash).gsub(/\n/, '<br/>').html_safe
+  = link_to policy_targets_path(@policy), class: 'btn btn-warning pull-right' do
+    Manage Targets
+.row
+  %pre= JSON.pretty_generate(@policy.serializable_hash).gsub(/\n/, '<br/>').html_safe
