--- a/app/assets/stylesheets/imports.scss
+++ b/app/assets/stylesheets/imports.scss
@@ -8,6 +8,7 @@
 @import "bootstrap-sass/assets/stylesheets/bootstrap-sprockets";
 @import "bootstrap-sass/assets/stylesheets/bootstrap";
 @import "college_green/styles-red";
+@import "jquery-tags-input/dist/jquery.tagsinput.min";
 
 .field_with_errors {
   @extend .has-error;
