--- a/app/views/permissions/policies/index.haml
+++ b/app/views/permissions/policies/index.haml
@@ -3,9 +3,10 @@
   = link_to new_policy_path, class: 'pull-right' do
     = fa_icon 'key'
     Create Policy
-
+%h1 Policies
 %table.table.table-responsive
   %thead
+    %th ID
     %th Priority
     %th Name
     %th Context
@@ -13,6 +14,7 @@
     %tr
       - @policies.order([:priority, :desc]).each do |policy|
         = content_tag_for(:tr, policy) do
+          %td= link_to policy.id, policy
           %td= policy.priority
-          %td= link_to policy.name, policy
+          %td= policy.name
           %td= policy.context
