--- a/app/views/permissions/targets/index.haml
+++ b/app/views/permissions/targets/index.haml
@@ -6,19 +6,5 @@
   = link_to new_policy_target_path(@policy), class: 'pull-right' do
     = fa_icon 'bullseye'
     Create Target
-%table.table.table-responsive
-  %thead
-    %th ID
-    %th Priority
-    %th Allow
-    %th Actions
-    %th Conditions
-  %tbody
-    %tr
-      - @policy.targets.order([:priority, :desc]).each do |target|
-        = content_tag_for(:tr, target) do
-          %td= link_to target.id, policy_target_path(@policy, target)
-          %td= target.priority
-          %td= target.allow
-          %td= target.actions
-          %td= target.conditions
+
+= render partial: 'targets', collection: @targets
