--- a/app/views/permissions/targets/_form.haml
+++ b/app/views/permissions/targets/_form.haml
@@ -12,12 +12,10 @@
 
   .template_mapping{hidden: :true}
     .form-inline.mapping
+      = link_to 'Remove', '#', class: 'btn btn-danger remove_mapping'
       %input.form-control.attribute_name{type: :text}
       %input.form-control.model_value{type: :text}
-      %a.remove_mapping{:href => "#"} Remove
-      %br/
-      %br/
-
+      
   %h3
     Conditions
     %btn.btn.btn-info{'data-toggle' => 'collapse', 'data-target' => '#cheatsheet'} Toggle Cheatsheet
@@ -77,7 +75,6 @@
             = link_to 'Remove', '#', class: 'btn btn-danger remove_mapping'
             = text_field_tag '', attribute, class: 'attribute_name form-control'
             = text_field_tag "target[conditions][#{comparator}][#{attribute}]", @target[:conditions][comparator][attribute], class: 'model_value form-control'
-          %br
   = f.submit 'Save', class: 'btn btn-success pull-right', id: 'submit-button'
 
 :javascript
