--- a/app/views/permissions/targets/_form.haml
+++ b/app/views/permissions/targets/_form.haml
@@ -10,57 +10,11 @@
   = f.label :allow
   = f.check_box :allow
 
-  .template_mapping{hidden: :true}
-    .form-inline.mapping
-      = link_to 'Remove', '#', class: 'btn btn-danger remove_mapping'
-      %input.form-control.attribute_name{type: :text}
-      %input.form-control.model_value{type: :text}
-      
   %h3
     Conditions
     %btn.btn.btn-info{'data-toggle' => 'collapse', 'data-target' => '#cheatsheet'} Toggle Cheatsheet
-  #cheatsheet.collapse
-    %table.table
-      %thead
-        %th Special Keyword
-        %th Description
-        %th Expected Location
-        %th Usage
-      %tbody
-        %tr.active
-          %td
-            %code *target_name
-          %td This is used for string permissions. The second parameter of a `can? :action, :string_perm` is checked against the value assigned to the attribute.
-          %td Attribute (first parameter of a condition)
-          %td
-            Example:
-            %code {:equals => { :'*target_name' =>  "peek_bar"}}
-            %br
-            %br
-            In
-            %code can? :view, "something_else"
-            Scram would check if "something_else" == "peek_bar"
-        %tr.active
-          %td
-            %code *holder
-          %td This is used to compare the current user (or holder) with a model's field.
-          %td Value (second parameter of a condition)
-          %td
-            Example:
-            %code {:equals => {:user => "*holder"}}
-            %br
-            %br
-            In
-            %code holder.can? :edit, model
-            Scram would check if the user attribute of the model is equal to the current user (or holder)
+  = render partial: 'permissions/targets/cheatsheet', policy: @policy
 
-      - @policy.model&.scram_conditions.keys.each do |detected_keyword|
-        %tr.info
-          %td
-            %code= "*#{detected_keyword}"
-          %td This target's policy is bound to a model which defined this conditional.
-          %td Value (second parameter of a condition)
-          %td Refer to source code.
   %h4 Manage Conditions
   - Scram::DSL::Definitions::COMPARATORS.keys.each do |comparator|
     .panel.panel-default
@@ -71,10 +25,8 @@
         %br/
         - @target[:conditions][comparator]&.each do |attribute, value|
           - next unless value
-          .form-inline.mapping
-            = link_to 'Remove', '#', class: 'btn btn-danger remove_mapping'
-            = text_field_tag '', attribute, class: 'attribute_name form-control'
-            = text_field_tag "target[conditions][#{comparator}][#{attribute}]", @target[:conditions][comparator][attribute], class: 'model_value form-control'
+          = render partial: 'permissions/targets/condition', locals: {comparator: comparator, attribute: attribute, value: value}
+
   = f.submit 'Save', class: 'btn btn-success pull-right', id: 'submit-button'
 
 :javascript
@@ -97,6 +49,6 @@
   });
 
   $('.add_mapping').click(function(event) {
-    $('.template_mapping .mapping').clone(true, true).appendTo($(this).closest('.comparator'));
+    $(this).closest('.comparator').append("#{j render(partial: 'condition', locals: {comparator: '', attribute: '', value: ''})}");
     event.preventDefault();
   });
